@@ -1,31 +1,40 @@
 package com.university.schedule.controller;
 
-import com.university.schedule.dto.*;
+import com.university.schedule.dto.RoleDTO;
+import com.university.schedule.exception.DeletionFailedException;
 import com.university.schedule.exception.ServiceException;
 import com.university.schedule.exception.ValidationException;
-import com.university.schedule.model.Role;
-import com.university.schedule.service.*;
+import com.university.schedule.service.AuthorityService;
+import com.university.schedule.service.RoleService;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.context.annotation.ComponentScan;
-import org.springframework.data.domain.Pageable;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(RoleRecordsController.class)
-@ComponentScan("com.university.schedule.formatter")
+@ActiveProfiles("test")
 public class RoleRecordsControllerTest {
+
+	private static final String USERNAME = "testUsername";
+	private static final String VIEW_AUTHORITY = "VIEW_ROLES";
+	private static final String EDIT_AUTHORITY = "EDIT_ROLES";
+	private static final String INSERT_AUTHORITY = "INSERT_ROLES";
 
 	@Autowired
 	private MockMvc mockMvc;
@@ -37,116 +46,275 @@ public class RoleRecordsControllerTest {
 	private AuthorityService authorityService;
 
 	@Test
-	@WithMockUser(username = "username", authorities = {"VIEW_ROLES"})
-	public void getAll_processPage() throws Exception {
-		List<RoleDTO> roleDTOS = new ArrayList<>();
+	@WithMockUser(username = USERNAME, authorities = VIEW_AUTHORITY)
+	public void getAll_whenNoArgs_happyPath() throws Exception {
+		// Arrange
+		List<RoleDTO> roleDTOList = new ArrayList<>();
+		roleDTOList.add(new RoleDTO(1L, "Role A"));
+		roleDTOList.add(new RoleDTO(2L, "Role B"));
 
-		AuthorityDTO authorityDTO = new AuthorityDTO(1L, "authorityName");
-		List<AuthorityDTO> authorityDTOList = List.of(authorityDTO);
+		when(roleService.findAllAsDTO(any())).thenReturn(roleDTOList);
 
-		roleDTOS.add(new RoleDTO(1L, "role 1", authorityDTOList));
-		roleDTOS.add(new RoleDTO(2L, "role 2", authorityDTOList));
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.get("/roles")).andExpect(status().is2xxSuccessful())
+				.andExpect(view().name("roles")).andExpect(
+						model().attributeExists("entities", "currentLimit", "currentOffset", "sortField", "sortDirection",
+								"reverseSortDirection")).andExpect(model().attribute("entities", roleDTOList));
 
-		when(roleService.findAllAsDTO(any(Pageable.class))).thenReturn(roleDTOS);
+		verify(roleService, times(1)).findAllAsDTO(any());
+	}
 
-		mockMvc.perform(MockMvcRequestBuilders.get("/roles")).andExpect(status().isOk())
-				.andExpect(view().name("roles"))
-				.andExpect(model().attributeExists("entities", "sortField", "sortDirection", "reverseSortDirection"))
-				.andExpect(model().attribute("entities", roleDTOS));
+
+	@ParameterizedTest
+	@CsvSource({"5, 10"})
+	@WithMockUser(username = USERNAME, authorities = VIEW_AUTHORITY)
+	public void getAll_whenLimitAndOffsetArgs_happyPath(int limit, int offset) throws Exception {
+		// Arrange
+		List<RoleDTO> roleDTOList = new ArrayList<>();
+		roleDTOList.add(new RoleDTO(1L, "Role A"));
+		roleDTOList.add(new RoleDTO(2L, "Role B"));
+
+		when(roleService.findAllAsDTO(
+				argThat(pageable -> pageable.getOffset() == offset && pageable.getPageSize() == limit))).thenReturn(
+				roleDTOList);
+
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.get(String.format("/roles?offset=%d&limit=%d", offset, limit)))
+				.andExpect(status().is2xxSuccessful()).andExpect(view().name("roles")).andExpect(
+						model().attributeExists("entities", "currentLimit", "currentOffset", "sortField", "sortDirection",
+								"reverseSortDirection")).andExpect(model().attribute("entities", roleDTOList));
+
+		verify(roleService, times(1)).findAllAsDTO(
+				argThat(pageable -> pageable.getOffset() == offset && pageable.getPageSize() == limit));
 	}
 
 	@Test
-	@WithMockUser(username = "username", authorities = {"EDIT_ROLES"})
-	public void delete() throws Exception {
-		Long groupId = 1L;
+	@WithMockUser(username = USERNAME, authorities = EDIT_AUTHORITY)
+	public void delete_happyPath() throws Exception {
+		// Arrange
+		Long roleId = 1L;
 
-		mockMvc.perform(MockMvcRequestBuilders.get("/roles/delete/{id}", groupId))
-				.andExpect(status().is3xxRedirection()).andExpect(redirectedUrl("/roles"));
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.get("/roles/delete/{id}", roleId)).andExpect(status().is3xxRedirection())
+				.andExpect(redirectedUrl("/roles"));
 
-		verify(roleService, times(1)).deleteById(groupId);
+		verify(roleService, times(1)).deleteById(roleId);
+	}
+
+
+	@Test
+	@WithMockUser(username = USERNAME, authorities = EDIT_AUTHORITY)
+	public void delete_whenRoleServiceThrowsDeletionFailedException_thenProcessError() throws Exception {
+		// Arrange
+		Long roleId = 1L;
+		String exceptionMessage = "Deletion Failed";
+
+		doThrow(new DeletionFailedException(exceptionMessage)).when(roleService).deleteById(roleId);
+
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.get("/roles/delete/{id}", roleId)).andExpect(status().is2xxSuccessful())
+				.andExpect(view().name("error")).andExpect(model().attribute("exceptionMessage", exceptionMessage));
+
+		verify(roleService, times(1)).deleteById(roleId);
 	}
 
 	@Test
-	@WithMockUser(username = "username", authorities = {"EDIT_ROLES"})
-	public void getUpdateForm() throws Exception {
-		Long roleDTOid = 1L;
-		AuthorityDTO authorityDTO = new AuthorityDTO(1L, "authorityName");
-		List<AuthorityDTO> authorityDTOList = List.of(authorityDTO);
+	@WithMockUser(username = USERNAME, authorities = EDIT_AUTHORITY)
+	public void getUpdateForm_happyPath() throws Exception {
+		// Arrange
+		Long roleId = 1L;
+		RoleDTO roleDTO = new RoleDTO(roleId, "Role Name");
 
-		RoleDTO roleDTO = new RoleDTO(roleDTOid, "role 1", authorityDTOList);
+		when(roleService.findByIdAsDTO(roleId)).thenReturn(roleDTO);
 
-		when(roleService.findByIdAsDTO(roleDTOid)).thenReturn(roleDTO);
-		when(authorityService.findAllAsDTO()).thenReturn(authorityDTOList);
-
-		mockMvc.perform(MockMvcRequestBuilders.get("/roles/update/{id}", roleDTOid)).andExpect(status().isOk())
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.get("/roles/update/{id}", roleId)).andExpect(status().isOk())
 				.andExpect(model().attributeExists("entity", "authorityDTOList"))
-				.andExpect(view().name("rolesUpdateForm")).andExpect(model().attribute("entity", roleDTO))
-				.andExpect(model().attribute("authorityDTOList", authorityDTOList));
+				.andExpect(model().attribute("entity", roleDTO)).andExpect(view().name("rolesUpdateForm"));
 
-		verify(roleService, times(1)).findByIdAsDTO(roleDTOid);
-		verify(authorityService, times(1)).findAllAsDTO();
+		verify(roleService, times(1)).findByIdAsDTO(roleId);
+	}
+
+
+	@Test
+	@WithMockUser(username = USERNAME, authorities = EDIT_AUTHORITY)
+	public void getUpdateForm_whenRoleServiceThrowsServiceException_thenProcessError() throws Exception {
+		// Arrange
+		Long roleId = 1L;
+		String exceptionMessage = "Service Exception";
+
+		when(roleService.findByIdAsDTO(roleId)).thenThrow(new ServiceException(exceptionMessage));
+
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.get("/roles/update/{id}", roleId)).andExpect(status().is2xxSuccessful())
+				.andExpect(model().attributeExists("exceptionMessage"))
+				.andExpect(model().attribute("exceptionMessage", exceptionMessage)).andExpect(view().name("error"));
+
+		verify(roleService, times(1)).findByIdAsDTO(roleId);
 	}
 
 	@Test
-	@WithMockUser(username = "username", authorities = {"EDIT_ROLES"})
-	public void update_whenNotValidGroup_emptyField_thenProcessForm() throws Exception {
-		Long roleDTOid = 1L;
-		AuthorityDTO authorityDTO = new AuthorityDTO(1L, "authorityName");
-		List<AuthorityDTO> authorityDTOList = List.of(authorityDTO);
+	@WithMockUser(username = USERNAME, authorities = EDIT_AUTHORITY)
+	public void update_whenValidRole_thenRedirectSuccess() throws Exception {
+		// Arrange
+		Long roleId = 1L;
+		RoleDTO validRoleDTO = RoleDTO.builder().id(roleId).name("Valid Role").build();
 
-		RoleDTO roleDTO = new RoleDTO(roleDTOid, "", authorityDTOList);
+		// Act and Assert
+		mockMvc.perform(post("/roles/update/{id}", roleId).with(csrf()).flashAttr("roleDTO", validRoleDTO))
+				.andExpect(status().is3xxRedirection()).andExpect(view().name("redirect:/roles/update/" + roleId));
 
-		when(roleService.findByIdAsDTO(roleDTOid)).thenReturn(roleDTO);
-		when(authorityService.findAllAsDTO()).thenReturn(authorityDTOList);
+		verify(roleService, times(1)).save(validRoleDTO);
+		verify(roleService, times(0)).findByIdAsDTO(any());
+	}
 
-		mockMvc.perform(MockMvcRequestBuilders.post("/roles/update/{id}", roleDTOid).with(csrf())
-						.flashAttr("roleDTO", roleDTO)).andExpect(status().isOk())
-				.andExpect(model().attributeExists("entity")).andExpect(model().attribute("entity", roleDTO))
+
+	@Test
+	@WithMockUser(username = USERNAME, authorities = EDIT_AUTHORITY)
+	public void update_whenNotValidRoleByEmptyField_thenProcessForm() throws Exception {
+		// Arrange
+		Long roleId = 1L;
+		RoleDTO invalidRoleDTO = RoleDTO.builder().id(roleId).name("").build();
+		when(roleService.findByIdAsDTO(roleId)).thenReturn(invalidRoleDTO);
+
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.post("/roles/update/{id}", roleId).with(csrf())
+						.flashAttr("roleDTO", invalidRoleDTO)).andExpect(status().is2xxSuccessful())
+				.andExpect(model().attributeExists("entity")).andExpect(model().attribute("entity", invalidRoleDTO))
 				.andExpect(view().name("rolesUpdateForm"));
 
-		verify(roleService, times(0)).save(roleDTO);
-
+		// Verify that roleService.save(roleDTO) was not called
+		verify(roleService, times(0)).save(invalidRoleDTO);
 	}
 
 	@Test
-	@WithMockUser(username = "username", authorities = {"EDIT_ROLES"})
-	public void update_whenGroupServiceThrowValidationException_thenProcessForm() throws Exception {
-		Long roleDTOid = 1L;
-		AuthorityDTO authorityDTO = new AuthorityDTO(1L, "authorityName");
-		List<AuthorityDTO> authorityDTOList = List.of(authorityDTO);
-
-		RoleDTO roleDTO = new RoleDTO(roleDTOid, "role 1", authorityDTOList);
+	@WithMockUser(username = USERNAME, authorities = EDIT_AUTHORITY)
+	public void update_whenRoleServiceThrowValidationException_thenProcessForm() throws Exception {
+		// Arrange
+		Long roleId = 1L;
+		RoleDTO roleDTO =
+				RoleDTO.builder().id(roleId).name("Valid Name").authorityDTOS(Collections.emptyList()).build();
 
 		ValidationException validationException = new ValidationException("testException", List.of("myError"));
 
-		when(roleService.save((RoleDTO) any())).thenThrow(validationException);
-		when(roleService.findByIdAsDTO(roleDTOid)).thenReturn(roleDTO);
-		when(authorityService.findAllAsDTO()).thenReturn(authorityDTOList);
+		when(roleService.save(roleDTO)).thenThrow(validationException);
 
-		mockMvc.perform(MockMvcRequestBuilders.post("/roles/update/{id}", roleDTOid).with(csrf())
-				.flashAttr("roleDTO", roleDTO)).andExpect(status().is3xxRedirection());
+		// Act and Assert
+		mockMvc.perform(
+						MockMvcRequestBuilders.post("/roles/update/{id}", roleId).with(csrf()).flashAttr("roleDTO", roleDTO))
+				.andExpect(status().is3xxRedirection());
 
 		verify(roleService, times(1)).save(roleDTO);
+		verify(roleService, times(0)).findByIdAsDTO(anyLong());
 	}
 
 	@Test
-	@WithMockUser(username = "username", authorities = {"EDIT_ROLES"})
-	public void update_whenGroupServiceThrowServiceException_thenProcessForm() throws Exception {
-		Long roleDTOid = 1L;
-		AuthorityDTO authorityDTO = new AuthorityDTO(1L, "authorityName");
-		List<AuthorityDTO> authorityDTOList = List.of(authorityDTO);
+	@WithMockUser(username = USERNAME, authorities = EDIT_AUTHORITY)
+	public void update_whenRoleServiceThrowServiceException_processError() throws Exception {
+		Long roleId = 1L;
+		RoleDTO roleDTO =
+				RoleDTO.builder().id(roleId).name("Valid Name").authorityDTOS(Collections.emptyList()).build();
+		String exceptionMessage = "Service Exception";
 
-		RoleDTO roleDTO = new RoleDTO(roleDTOid, "role 1", authorityDTOList);
+		when(roleService.save(any(RoleDTO.class))).thenThrow(new ServiceException(exceptionMessage));
 
-		ServiceException serviceException = new ServiceException("testException");
+		mockMvc.perform(
+						MockMvcRequestBuilders.post("/roles/update/{id}", roleId).with(csrf()).flashAttr("roleDTO", roleDTO))
+				.andExpect(status().isOk()).andExpect(model().attribute("exceptionMessage", exceptionMessage))
+				.andExpect(view().name("error"));
 
-		when(roleService.save((RoleDTO) any())).thenThrow(serviceException);
-		when(roleService.findByIdAsDTO(roleDTOid)).thenReturn(roleDTO);
-		when(authorityService.findAllAsDTO()).thenReturn(authorityDTOList);
+		verify(roleService, times(1)).save(any(RoleDTO.class));
+		verify(roleService, times(0)).findByIdAsDTO(any());
+	}
 
-		mockMvc.perform(MockMvcRequestBuilders.post("/roles/update/{id}", roleDTOid).with(csrf())
-				.flashAttr("roleDTO", roleDTO)).andExpect(status().is3xxRedirection());
+	@Test
+	@WithMockUser(username = USERNAME, authorities = INSERT_AUTHORITY)
+	public void getInsertForm_happyPath() throws Exception {
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.get("/roles/insert")).andExpect(status().isOk())
+				.andExpect(view().name("rolesInsertForm")).andExpect(model().attributeExists("authorityDTOList"));
 
+	}
+
+
+	@Test
+	@WithMockUser(username = USERNAME)
+	public void getInsertFrom_whenAccessDenied_processError() throws Exception {
+		mockMvc.perform(get("/roles/insert")).andExpect(status().is2xxSuccessful())
+				.andExpect(model().attributeExists("exceptionMessage")).andExpect(view().name("error"));
+
+	}
+
+
+	@Test
+	@WithMockUser(username = USERNAME, authorities = INSERT_AUTHORITY)
+	public void insert_whenValidRole_thenRedirectSuccess() throws Exception {
+		// Arrange
+		Long roleId = 0L;
+		RoleDTO roleDTO = RoleDTO.builder().name("Role A").build();
+
+		when(roleService.save(roleDTO)).thenReturn(roleId);
+
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.post("/roles/insert").with(csrf()).flashAttr("roleDTO", roleDTO))
+				.andExpect(status().is3xxRedirection()).andExpect(view().name("redirect:/authorities"))
+				.andExpect(flash().attribute("insertedSuccessId", roleId));
+
+		// Verify interactions and ensure no more interactions
 		verify(roleService, times(1)).save(roleDTO);
+		verifyNoMoreInteractions(roleService);
+	}
+
+
+	@Test
+	@WithMockUser(username = USERNAME, authorities = INSERT_AUTHORITY)
+	public void insert_whenNotValidRoleByEmptyField_thenProcessForm() throws Exception {
+		// Arrange
+		RoleDTO roleDTO = RoleDTO.builder().name("").build();
+
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.post("/roles/insert").with(csrf()).flashAttr("roleDTO", roleDTO))
+				.andExpect(status().is2xxSuccessful()).andExpect(view().name("rolesInsertForm"));
+
+		// Verify that roleService was not interacted with
+		verifyNoInteractions(roleService);
+	}
+
+	@Test
+	@WithMockUser(username = USERNAME, authorities = INSERT_AUTHORITY)
+	public void insert_whenRoleServiceThrowValidationException_thenProcessForm() throws Exception {
+		// Arrange
+		RoleDTO roleDTO = RoleDTO.builder().name("Role A").build();
+
+		ValidationException validationException = new ValidationException("testException", List.of("myError"));
+
+		when(roleService.save(roleDTO)).thenThrow(validationException);
+
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.post("/roles/insert").with(csrf()).flashAttr("roleDTO", roleDTO))
+				.andExpect(status().is3xxRedirection());
+
+		// Verify that roleService.save(roleDTO) was called once
+		verify(roleService, times(1)).save(roleDTO);
+		verifyNoMoreInteractions(roleService);
+	}
+
+	@Test
+	@WithMockUser(username = USERNAME, authorities = INSERT_AUTHORITY)
+	public void insert_whenRoleServiceThrowServiceException_processError() throws Exception {
+		// Arrange
+		RoleDTO roleDTO = RoleDTO.builder().name("Role A").build();
+		String exceptionMessage = "Service Exception";
+
+		when(roleService.save(roleDTO)).thenThrow(new ServiceException(exceptionMessage));
+
+		// Act and Assert
+		mockMvc.perform(MockMvcRequestBuilders.post("/roles/insert").with(csrf()).flashAttr("roleDTO", roleDTO))
+				.andExpect(status().is2xxSuccessful())
+				.andExpect(model().attribute("exceptionMessage", exceptionMessage));
+
+		// Verify that roleService.save(roleDTO) was called once
+		verify(roleService, times(1)).save(roleDTO);
+		verifyNoMoreInteractions(roleService);
 	}
 }
